--- a/bin/build
+++ b/bin/build
@@ -5,6 +5,7 @@ mvn package # creates target/demo.war
 # Move the artifact into pkg so we do not have to send the whole target file
 # to the docker build context. We will dockerignore target because it contains
 # other build files that bloats the upload context sent to docker.
+#modified
 mkdir -p pkg
 mv target/demo.war pkg/demo.war
 
